--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "^1.2.2",
-    "@radix-ui/react-alert-dialog": "^1.1.4",
+    "@radix-ui/react-alert-dialog": "^1.1.5",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
@@ -26,10 +26,12 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.469.0",
+    "motion": "^12.0.3",
     "react": "^18.3.1",
     "react-big-calendar": "^1.17.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-element-to-jsx-string": "^17.0.0",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.1",
     "tailwind-merge": "^2.6.0",
